# MPI-Projects

./: .env  .gitignore  CMakeLists.txt  Makefile  docker-compose.yml  mpi_calculate_pi.cpp  mpi_hello_world.cpp  mpi_matrix_multiplication.cpp  mpi_prime_number.cpp  run.sh  test.cpp
include/: matrix.h  matrix_multiplication.h
src/: matrix_multiplication.cpp
